--- a/index.html
+++ b/index.html
@@ -25,37 +25,39 @@
   <body>
     <header class="cotainer">
       <div class="logo-container">
-        <nav class="view-container">
-          <a class="link-logo" href="./index.html"
-            >WEB<span class="link-logo-name">Studio</span></a
-          >
-          <ul class="menu">
-            <li><a class="link" href="./index.html">Studio</a></li>
-            <li><a class="link" href="">Portfolio</a></li>
-            <li><a class="link" href="">Contacts</a></li>
-          </ul>
-        </nav>
+        <div class="container">
+          <nav class="view-container">
+            <a class="link-logo" href="./index.html"
+              >WEB<span class="link-logo-name">Studio</span></a
+            >
+            <ul class="menu">
+              <li><a class="link" href="./index.html">Studio</a></li>
+              <li><a class="link" href="">Portfolio</a></li>
+              <li><a class="link" href="">Contacts</a></li>
+            </ul>
+          </nav>
 
-        <address class="adress-social-links">
-          <ul class="data-social-links">
-            <li>
-              <a class="social-links" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a class="social-links" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
+          <address class="adress-social-links">
+            <ul class="data-social-links">
+              <li>
+                <a class="social-links" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="social-links" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
       </div>
     </header>
 
     <main>
       <section class="main-page">
-        <div class="main-container">
+        <div class="container">
           <h1 class="main-page-hello-text">
             Effective Solutions for Your Business
           </h1>
@@ -74,21 +76,21 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="data-team-container-menu-title">
               <h3 class="main-page-title-data">Punctuality</h3>
               <p class="main-page-title-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="data-team-container-menu-title">
               <h3 class="main-page-title-data">Diligence</h3>
               <p class="main-page-title-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="data-team-container-menu-title">
               <h3 class="main-page-title-data">Technologies</h3>
               <p class="main-page-title-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -99,7 +101,7 @@
         </div>
       </section>
       <section class="card">
-        <div class="card-cotainer">
+        <div class="container">
           <h2 class="card-title-hello">Our Team</h2>
 
           <ul class="card-title-hello-menu">
@@ -154,7 +156,7 @@
         </div>
       </section>
       <section class="title-card">
-        <div class="title-card-container">
+        <div class="container">
           <h2 class="title-card-hello">Our Portfolio</h2>
           <ul class="project-card-view">
             <li class="project-card-view-portfolio">
@@ -233,7 +235,7 @@
       </section>
     </main>
     <footer class="data-view">
-      <div class="data-view-container">
+      <div class="container">
         <a class="link-logo-data" href="./index.html">
           WEB<span class="link-logo-name-view">Studio</span></a
         >
