--- a/index.html
+++ b/index.html
@@ -110,8 +110,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="card-title">Mark Guerrero</h3>
-              <p class="card-text">Product Designer</p>
+              <div class="card-title-data">
+                <h3 class="card-title">Mark Guerrero</h3>
+                <p class="card-text">Product Designer</p>
+              </div>
             </li>
 
             <li class="card-title-view">
@@ -121,8 +123,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="card-title">Tom Ford</h3>
-              <p class="card-text">Frontend Developer</p>
+              <div class="card-title-data">
+                <h3 class="card-title">Tom Ford</h3>
+                <p class="card-text">Frontend Developer</p>
+              </div>
             </li>
 
             <li class="card-title-view">
@@ -132,8 +136,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="card-title">Camila Garcia</h3>
-              <p class="card-text">Marketing</p>
+              <div class="card-title-data">
+                <h3 class="card-title">Camila Garcia</h3>
+                <p class="card-text">Marketing</p>
+              </div>
             </li>
 
             <li class="card-title-view">
@@ -143,8 +149,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="card-title">Daniel Wilson</h3>
-              <p class="card-text">UI Designer</p>
+              <div class="card-title-data">
+                <h3 class="card-title">Daniel Wilson</h3>
+                <p class="card-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -160,9 +168,10 @@
                 width="360"
                 height="300"
               />
-
-              <h3 class="project-card-title">Banking App</h3>
-              <p class="project-card-text">App</p>
+              <div class="project-card-title-data">
+                <h3 class="project-card-title">Banking App</h3>
+                <p class="project-card-text">App</p>
+              </div>
             </li>
 
             <li>
@@ -172,9 +181,10 @@
                 width="360"
                 height="300"
               />
-
-              <h3 class="project-card-title">Cashless Payment</h3>
-              <p class="project-card-text">Marketing</p>
+              <div class="project-card-title-data">
+                <h3 class="project-card-title">Cashless Payment</h3>
+                <p class="project-card-text">Marketing</p>
+              </div>
             </li>
 
             <li>
@@ -184,9 +194,10 @@
                 width="360"
                 height="300"
               />
-
-              <h3 class="project-card-title">Meditation App</h3>
-              <p class="project-card-text">App</p>
+              <div class="project-card-title-data">
+                <h3 class="project-card-title">Meditation App</h3>
+                <p class="project-card-text">App</p>
+              </div>
             </li>
 
             <li>
@@ -196,9 +207,10 @@
                 width="360"
                 height="300"
               />
-
-              <h3 class="project-card-title">Taxi Service</h3>
-              <p class="project-card-text">Marketing</p>
+              <div class="project-card-title-data">
+                <h3 class="project-card-title">Taxi Service</h3>
+                <p class="project-card-text">Marketing</p>
+              </div>
             </li>
 
             <li>
@@ -208,9 +220,10 @@
                 width="360"
                 height="300"
               />
-
-              <h3 class="project-card-title">Screen Illustrations</h3>
-              <p class="project-card-text">Design</p>
+              <div class="project-card-title-data">
+                <h3 class="project-card-title">Screen Illustrations</h3>
+                <p class="project-card-text">Design</p>
+              </div>
             </li>
 
             <li>
@@ -220,9 +233,10 @@
                 width="360"
                 height="300"
               />
-
-              <h3 class="project-card-title">Online Courses</h3>
-              <p class="project-card-text">Marketing</p>
+              <div class="project-card-title-data">
+                <h3 class="project-card-title">Online Courses</h3>
+                <p class="project-card-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
