--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="project-card-view-portfolio">
               <img
                 src="./images/img-5.jpg"
                 alt="Cashless Payment"
@@ -187,7 +187,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="project-card-view-portfolio">
               <img
                 src="./images/img-6.jpg"
                 alt="Meditation App"
@@ -200,7 +200,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="project-card-view-portfolio">
               <img
                 src="./images/img-7.jpg"
                 alt="Taxi Service"
@@ -213,7 +213,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="project-card-view-portfolio">
               <img
                 src="./images/img-8.jpg"
                 alt="Screen Illustrations"
@@ -226,7 +226,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="project-card-view-portfolio">
               <img
                 src="./images/img-9.jpg"
                 alt="Online Courses"
