--- a/index.html
+++ b/index.html
@@ -25,31 +25,33 @@
   <body>
     <header class="cotainer">
       <div class="container">
-        <nav class="view-container">
-          <a class="link-logo" href="./index.html"
-            >WEB<span class="link-logo-name">Studio</span></a
-          >
-          <ul class="menu">
-            <li><a class="link" href="./index.html">Studio</a></li>
-            <li><a class="link" href="">Portfolio</a></li>
-            <li><a class="link" href="">Contacts</a></li>
-          </ul>
-        </nav>
+        <div class="cont">
+          <nav class="view-container">
+            <a class="link-logo" href="./index.html"
+              >WEB<span class="link-logo-name">Studio</span></a
+            >
+            <ul class="menu">
+              <li><a class="link" href="./index.html">Studio</a></li>
+              <li><a class="link" href="">Portfolio</a></li>
+              <li><a class="link" href="">Contacts</a></li>
+            </ul>
+          </nav>
 
-        <address class="adress-social-links">
-          <ul class="data-social-links">
-            <li>
-              <a class="social-links" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a class="social-links" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
+          <address class="adress-social-links">
+            <ul class="data-social-links">
+              <li>
+                <a class="social-links" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="social-links" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
       </div>
     </header>
 
