--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <body>
     <header class="cotainer">
-      <div class="container">
+      <div class="container container-data">
         <nav class="view-container">
           <a class="link-logo" href="./index.html"
             >WEB<span class="link-logo-name">Studio</span></a
