--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
         <address class="adress-social-links">
           <ul class="data-social-links">
-            <li>
+            <li class="address-links">
               <a class="social-links" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="address-links">
               <a class="social-links" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
